Fixed sidebar header squishing

--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -15,6 +15,8 @@ aside {
     transition: right 0.2s;
 
     header {
+        min-height: 48px;
+        
         display: flex;
         flex-wrap: wrap;
 
